[package]
name = "dementia"
version = "0.0.4-pre1"
authors = ["Robert Czechowski <robert+git@czecho.de>"]
description = "A small client library for the Matrix protocol"
license="Apache-2.0/GPL-3.0"
keywords = ["matrix", "chat", "protocol", "riot"]
categories = ["api-bindings", "network-programming"]
readme = "readme.md"
repository = "https://github.com/zgtm/dementia"

[dependencies]
reqwest = "0.8.5"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
url = "1.7.0"
rand = "0.4"

[badges]
maintenance = { status = "experimental" }