[package]
name = "dementia"
version = "0.0.4"
authors = ["Robert Czechowski <robert+git@czecho.de>"]
description = "A small client library for the Matrix protocol"

documentation = "https://docs.rs/dementia"
repository = "https://github.com/zgtm/dementia"

readme = "readme.md"
keywords = ["matrix", "chat", "protocol", "riot"]
categories = ["api-bindings", "network-programming"]

license="Apache-2.0/GPL-3.0"

[dependencies]
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.7"
rand = "0.5"

[badges]
maintenance = { status = "experimental" }
